--- a/HierarchyArchitect.csproj
+++ b/HierarchyArchitect.csproj
@@ -106,6 +106,16 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
+                    RelPath = "TVFunc.cs"
+                    SubType = "Component"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "TVFunc.resx"
+                    DependentUpon = "TVFunc.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "View.cs"
                     SubType = "UserControl"
                     BuildAction = "Compile"
@@ -155,6 +165,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Girl\DnDTreeView.resx"
+                    DependentUpon = "DnDTreeView.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "Girl\Document.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -163,6 +178,11 @@
                     RelPath = "Girl\ExTreeView.cs"
                     SubType = "Component"
                     BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "Girl\ExTreeView.resx"
+                    DependentUpon = "ExTreeView.cs"
+                    BuildAction = "EmbeddedResource"
                 />
                 <File
                     RelPath = "Girl\InternalScrollBar.cs"
