--- a/HierArch/HierArch.csproj
+++ b/HierArch/HierArch.csproj
@@ -131,6 +131,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "HAViewInfo.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "HierArch.exe.manifest"
                     BuildAction = "None"
                 />
